--- a/src/MinMe.WebAssembly/Shared/MainLayout.razor
+++ b/src/MinMe.WebAssembly/Shared/MainLayout.razor
@@ -6,7 +6,8 @@
 
 <MudLayout>
     <MudAppBar Elevation="1">
-        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        @* <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" /> *@
+        <MudText Typo="Typo.h5">MinMe WebAssembly</MudText>
         <MudAppBarSpacer />
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/sergey-tihon/MinMe" Target="_blank" />
     </MudAppBar>
@@ -22,7 +23,7 @@
 </MudLayout>
 
 @code {
-    bool _drawerOpen = true;
+    bool _drawerOpen = false;
 
     void DrawerToggle()
     {
