--- a/src/MinMe.WebAssembly/Shared/MainLayout.razor
+++ b/src/MinMe.WebAssembly/Shared/MainLayout.razor
@@ -1,4 +1,4 @@
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
 <MudThemeProvider />
 <MudDialogProvider />
@@ -8,7 +8,7 @@
     <MudAppBar Elevation="1">
         @* <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" /> *@
         <MudText Typo="Typo.h5">MinMe WebAssembly</MudText>
-        <MudAppBarSpacer />
+        <MudSpacer />
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/sergey-tihon/MinMe" Target="_blank" />
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="2">
