--- a/src/MinMe.Avalonia/Views/SlidesInfoView.axaml
+++ b/src/MinMe.Avalonia/Views/SlidesInfoView.axaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="250"
              x:Class="MinMe.Avalonia.Views.SlidesInfoView">
-  <DataGrid Margin="10" Items="{Binding Slides}">
+  <DataGrid Margin="10" ItemsSource="{Binding Slides}">
     <DataGrid.Columns>
       <DataGridTextColumn Header="#" Binding="{Binding Number}" Width="Auto"/>
       <DataGridTextColumn Header="Title" Binding="{Binding Title}" Width="*"/>
