--- a/src/MinMe.Avalonia/Views/ActionsPanelView.axaml
+++ b/src/MinMe.Avalonia/Views/ActionsPanelView.axaml
@@ -19,7 +19,7 @@
       <Grid ColumnDefinitions="Auto,5,130" RowDefinitions="*,*">
         <Button Grid.RowSpan="2" Command="{Binding OptimizeCommand}">Optimize</Button>
         <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Center">Target screen resolution</TextBlock>
-        <ComboBox Grid.Column="2" Grid.Row="1" Items="{Binding PublishModes}"
+        <ComboBox Grid.Column="2" Grid.Row="1" ItemsSource="{Binding PublishModes}"
                   SelectedItem="{Binding SelectedMode, Mode=TwoWay}" />
       </Grid>
     </Border>
